@@ -60,6 +60,7 @@ Fixes #2354 by updating version of tmdbapi dependency
 Added Start Time, Finished and Run Time to Summary of run.
 Fixed an issue where custom repositories would not work correctly if the URL did not end in a trailing `/` character.
 Kometa will now check for `.yaml` extension in filenames if `.yml` is not found and vice-versa
+Log files will now follow the naming convention of `kometa.log`, `kometa-1.log` (previous run), `kometa-2.log (2 runs ago) etc.
 Kometa will no longer automatically sync playlists to all users if you do not specify who you want to sync them to. Only the server admin will receive playlists unless otherwise specified using `sync_to_users` or `playlist_sync_to_users`
 Fixes #2385 `tmdb_person` would pass an integer if the name started with an integer (i.e. `50 Cent` would pass `50` which resolved to `Catherine Deneuve`)
 Fixes an issue where `show_missing` would display missing movies against show libraries (closes #2351)
